syntax = "proto2";

package commonroad;

import "util.proto";
import "scenario_tags.proto";
import "location.proto";
import "lanelet.proto";
import "traffic_sign.proto";
import "traffic_light.proto";
import "intersection.proto";
import "static_obstacle.proto";
import "dynamic_obstacle.proto";
import "environment_obstacle.proto";
import "phantom_obstacle.proto";
import "planning_problem.proto";

message ScenarioInformation {
    required string common_road_version = 1;
    required string benchmark_id = 2;
    required TimeStamp date = 3;
    required string author = 4;
    required string affiliation = 5;
    required string source = 6;
    required double time_step_size = 7;
}

message CommonRoad {
    required ScenarioInformation information = 1;
    required ScenarioTags scenario_tags = 2;
    required Environment environment = 3;
    required TrafficLightCycle traffic_light_cycle = 3;
    repeated StaticObstacle static_obstacles = 4;
    repeated DynamicObstacle dynamic_obstacles = 5;
    repeated EnvironmentObstacle environment_obstacles = 6;
    repeated PhantomObstacle phantom_obstacles = 7;
}