syntax = "proto2";

package commonroad_map;

import "util.proto";

message TrafficLightDirectionEnum {
    enum TrafficLightDirection {
        RIGHT = 0;
        STRAIGHT = 1;
        LEFT = 2;
        LEFT_STRAIGHT = 3;
        STRAIGHT_RIGHT = 4;
        LEFT_RIGHT = 5;
        ALL = 6;
    }
}

message TrafficLight {
    required uint32 traffic_light_id = 1;
    optional Point position = 3;
    optional TrafficLightDirectionEnum.TrafficLightDirection direction = 5;
}